Improved spacing. Fix hooks returning new objects

--- a/src/components/AKeyboard/AKeyboard.scss
+++ b/src/components/AKeyboard/AKeyboard.scss
@@ -1,5 +1,5 @@
 #AKeyboard {
-    margin: 0 -8px;
+    margin: 0 0 12px 0;
     .KeysRow {
         display: flex;
         gap: 1px;
